Update ribbon css

--- a/assets/css/ribbon.css
+++ b/assets/css/ribbon.css
@@ -73,6 +73,7 @@
   color: #fff;
   font: 700 1em Quicksand;
   line-height: 1.5em;
+  letter-spacing: 0.2em;
   text-decoration: none;
   text-shadow: 0 -.08em rgba(0, 0, 0, 0.5);
   text-align: center;
