--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1033,6 +1033,7 @@
 		display: block;
 		margin: 0 auto;
 		padding-bottom: 0.3em;
+		opacity: 0.8;
 	}
 
 	@media screen and (max-width: 736px) {
