Update main css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -581,6 +581,22 @@
 					color: inherit;
 				}
 
+/* Video */
+
+video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
+  background: url() no-repeat;
+  background-size: cover;
+}
+
 /* Form */
 
 	form {
