--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -584,7 +584,7 @@
 /* Video */
 
 video {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   z-index: 1;
@@ -593,7 +593,6 @@ video {
   width: auto;
   height: auto;
   transform: translate(-50%, -50%);
-  background: url() no-repeat;
   background-size: cover;
 }
 
