Update main css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -593,6 +593,7 @@ video {
   width: auto;
   height: auto;
   transform: translate(-50%, -50%);
+	background-image: url("https://cdn.thegreenhouse.online/image/parco.jpg");
   background-size: cover;
 }
 
